overflow fix

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -32,7 +32,7 @@
 
 }
 
-html {
+html, body {
     width: 100vw;
     max-width: 100vw;
     position: relative;
@@ -138,7 +138,6 @@ body {
 
     font-family: var(--font-family-regular);
     font-size: var(--body-heading-s);
-    overflow-x: hidden;
 }
 
 h1,
